 - A160960 - a(n) = Sum_{d|n} Moebius(n/d)*d^(b-1)/phi(n) for b = 12
 - A001615 - Dedekind psi function
 - A008683 - Möbius (or Moebius) function mu(n)
 - A001221 - Number of distinct primes dividing n (also called omega(n))
 - A001222 - Number of prime divisors of n counted with multiplicity (also called bigomega(n) or Omega(n))
 

## v0.9.0

### Changes/Refactorizations

### Enhancements

 - Chunky.Math
  - is_abundant?/1 - Is a number `n` an Abundant number
  - next_abundant/1 - Find the next abundant number after `n`
  - is_perfect?/1 - Is a number `n` a perfect number
  - is_deficient?/1 - Is a number `n` a deficient number
  - next_deficient/1 - Find the next deficient number
  - is_arithmetic_number?/1 - Is a number `n` an arithmetic number
  - aliquot_sum/1 - Aliquot Sum of `n`
  - is_highly_abundant?/1` - Is a number `n` highly abundant?
  - is_powerful_number?/1 - Is a number `n` a powerful number?
  - product_of_prime_factors/1 - Number theoretical function for product of prime factor exponents of `n`
  - is_highly_powerful_number?/1 - Is a number a _highly powerful_ number?
  - is_perfect_power?/1 - Is integer `n` a perfect power?
  - is_perfect_square?/1 - Is integer `n` a perfect square?
  - is_perfect_cube?/1 - Is integer `n` a perfect cube?
  - is_root_of?/2 - Is integer `n` any k-th root of `m`?
  - is_achilles_number?/1 - Is integer `n` an achilles number?
  - is_coprime?/2 - Test if `m` and `n` are co-prime
  - totient/1 - Calculate Euler's totient for `n`
  
 - Chunky.Sequence
  - drop/2 - Like Enum.drop
  
### New Sequences
 
 - A001065 - Aliquot parts of N
 - A005101 - Abundant Numbers
 - A000396 - Perfect Numbers
 - A005100 - Deficient Numbers
 - A003601 - Arithmetic Numbers
 - A002093 - Highly Abundant Numbers
 - Added Sequences.OEIS.Factors module
 - A001694 - Powerful Numbers
 - A005361 - Product of Prime Exponents of factors of N
 - A005934 - Highly powerful numbers: numbers with record value
 - A001597 - Perfect Powers